--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-ejs-layouts": "^2.3.1",
-    "mongoose": "^5.0.0"
+    "mongoose": "^5.0.0",
+    "multer": "^1.3.0"
   },
   "name": "node-1",
   "version": "1.0.0",
