--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.16.2",
     "express-ejs-layouts": "^2.3.1",
     "express-session": "^1.15.6",
+    "http": "^0.0.0",
     "mongoose": "^5.0.0",
     "multer": "^1.3.0",
     "passport": "^0.4.0",
